--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -16,8 +16,9 @@ jobs:
           python-version: 3.8
       - name: install libraries
         run:  |
+          python -m pip install --upgrade pip
           cd function 
-          if [-f requirements.txt]; then pip install -r requirements.txt -t .; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt -t .; fi
       - name: zip the function up
         run: |
           cd function 
