--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -28,3 +28,18 @@ jobs:
         with:
           name: zipped-bundle
           path: ${{github.sha}}.zip
+  upload:
+    runs-on: ubuntu-latest
+    steps:
+      - name: download zip file
+        with:
+          name: zipped-bundle
+      - name: setup aws creds
+        uses: actions/configure-aws-credentials@v1
+        with: 
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-2
+      - name: upload to s3 
+        run: |
+          aws s3 cp ${{github.sha}}.zip s3://repon/
