--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -32,6 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: download zip file
+        uses: actions/download-artifact@v2
         with:
           name: zipped-bundle
       - name: setup aws creds
