--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -36,10 +36,9 @@ jobs:
         with:
           name: zipped-bundle
       - name: setup aws creds
-        uses: actions/configure-aws-credentials@v1
-        with: 
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: arn:aws:iam::582539599701:role/github-role
           aws-region: eu-west-2
       - name: upload to s3 
         run: |
