--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -5,7 +5,7 @@ on:
       - main
 permissions:
   id-token: write
-  contexts : read
+  contents : read
 jobs:
   build:
     runs-on: ubuntu-latest
