--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+concurrency: ga-dev
 permissions:
   id-token: write
   contents : read
@@ -48,3 +49,19 @@ jobs:
      
         run: |
           aws s3 cp ${{github.sha}}.zip s3://repon/
+  deploy:
+    runs-on: ubuntu-latest
+    needs: upload
+    
+    steps:
+      - name: setup aws creds
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: arn:aws:iam::582539599701:role/github-role
+          aws-region: eu-west-2
+      - name: upload to lambda 
+        run: |
+          aws lambda update-function-code \
+          --function-name test-function \
+          --s3-bucket repos \
+          --s3-key ${{ github.sha }}.zip
