--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -71,7 +71,7 @@ jobs:
             aws lambda create-function --function-name test-function-${{ matrix.input }} \
               --code S3Bucket=<YOUR BUCKET NAME HERE>,S3Key=${{ github.repository }}/${{ github.sha }}.zip \
               --handler lambda_function.lambda_handler --runtime python3.8 \
-              --role arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/<YOUR ROLE NAME HERE>
+              --role arn:aws:iam::582539599701:role/github-role
       - name: Invoke test function 
         run: |
             aws lambda invoke --function-name test-function-${{ matrix.input }} \
