--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -60,6 +60,8 @@ jobs:
     strategy:
       matrix:
         input: ["hello","hi"]
+    env:
+      BUCKET_NAME:  'repon'
     steps:
       - name: setup aws creds
         uses: aws-actions/configure-aws-credentials@v1
@@ -69,7 +71,7 @@ jobs:
       - name: Create test function
         run: |
             aws lambda create-function --function-name test-function-${{ matrix.input }} \
-              --code S3Bucket=<YOUR BUCKET NAME HERE>,S3Key=${{ github.repository }}/${{ github.sha }}.zip \
+              --code S3Bucket=${{ env.BUCKET_NAME }},S3Key=${{ github.sha }}.zip \
               --handler lambda_function.lambda_handler --runtime python3.8 \
               --role arn:aws:iam::582539599701:role/github-role
       - name: Invoke test function 
