--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -62,6 +62,7 @@ jobs:
         input: ["hello","hi"]
     env:
       BUCKET_NAME:  'repon'
+      FUNCTION_ROLE: 'test-function-role-gm1tppo9'
     steps:
       - name: setup aws creds
         uses: aws-actions/configure-aws-credentials@v1
@@ -73,7 +74,7 @@ jobs:
             aws lambda create-function --function-name test-function-${{ matrix.input }} \
               --code S3Bucket=${{ env.BUCKET_NAME }},S3Key=${{ github.sha }}.zip \
               --handler lambda_function.lambda_handler --runtime python3.8 \
-              --role arn:aws:iam::582539599701:role/github-role
+              --role ${{ env.FUNCTION_ROLE }}
       - name: Invoke test function 
         run: |
             aws lambda invoke --function-name test-function-${{ matrix.input }} \
